--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
               </div>
               <div class="card">
                 <footer class="card-footer">
-                  <a href="#" class="card-footer-item">Accéder au Site</a>
+                  <a
+                    href="#"
+                    target="_blank"
+                    class="lien_projet card-footer-item"
+                    >Accéder au Site</a
+                  >
                   <a href="#" class="card-footer-item">Edit</a>
                 </footer>
               </div>
