--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         <div class="background background-link">
           <div id="background-effect"></div>
         </div>
+        <div class="build-info">
+          <article class="message is-info">
+            <div class="message-header">
+              <p>Info</p>
+              <button class="delete" aria-label="delete"></button>
+            </div>
+            <div class="message-body">
+              site actuellement en cours de développement...
+            </div>
+          </article>
+        </div>
         <div class="container">
           <div id="header">
             <nav
