--- a/index.html
+++ b/index.html
@@ -77,16 +77,10 @@
                 <div class="navbar-end">
                   <div class="navbar-item">
                     <div class="buttons">
-                      <button class="button is-info p-2 mr-4 btn-moins">
-                        moins
-                      </button>
                       <div class="button-text text-align-center">
                         <p>Heure actuelle :</p>
-                        <p class="text-change">10h00</p>
+                        <p class="text-change"></p>
                       </div>
-                      <button class="button is-info p-2 ml-4 btn-plus">
-                        plus
-                      </button>
                     </div>
                   </div>
                 </div>
