add second page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
                 <div class="navbar-start">
                   <a class="navbar-item btn_home"> Home </a>
 
-                  <a class="navbar-item"> A propos de moi </a>
+                  <a
+                    class="navbar-item"
+                    href="./page_secondaire/secondaire.html"
+                  >
+                    A propos de moi
+                  </a>
 
                   <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link"> Projets </a>
