add contact page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./bulma.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Louan Flamain</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/adobe-portfolio.png"
+    />
+
+    <title>Louan Flamain -- Home</title>
   </head>
   <body>
     <div class="page-section">
@@ -62,6 +69,14 @@
                   A propos de moi
                 </a>
 
+                <a
+                  id="contact-page"
+                  class="navbar-item"
+                  href="./page_contact/contact.html"
+                >
+                  Me contacter
+                </a>
+
                 <div class="navbar-item has-dropdown is-hoverable">
                   <a class="navbar-link"> Projets </a>
 
@@ -72,6 +87,19 @@
                     <hr class="navbar-divider" />
                     <a class="navbar-item"> Report an issue </a>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="navbar-end">
+              <div class="navbar-item">
+                <div class="buttons">
+                  <a
+                    class="button is-primary is-outlined"
+                    href="./img/CV-cor.pdf"
+                    download="./img/CV-cor.pdf"
+                  >
+                    <strong>Download CV</strong>
+                  </a>
                 </div>
               </div>
             </div>
