--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
             aria-label="main navigation"
           >
             <div class="navbar-brand">
-              <a class="navbar-item btn_home">
-                <img
-                  src="https://bulma.io/images/bulma-logo.png"
-                  width="112"
-                  height="28"
-                />
+              <a class="navbar-item">
+                <p class="button is-link">Portfolio</p>
               </a>
 
               <a
@@ -84,8 +80,6 @@
                     <a id="btn_paint" class="navbar-item"> Paint </a>
                     <a id="btn_cinewave" class="navbar-item"> Ciné-Wave </a>
                     <a id="btn_react" class="navbar-item"> React </a>
-                    <hr class="navbar-divider" />
-                    <a class="navbar-item"> Report an issue </a>
                   </div>
                 </div>
               </div>
@@ -166,7 +160,6 @@
                     class="lien_projet card-footer-item"
                     >Accéder au Site</a
                   >
-                  <a href="#" class="card-footer-item">Edit</a>
                 </footer>
               </div>
             </div>
