--- a/page_secondaire/secondaire.html
+++ b/page_secondaire/secondaire.html
@@ -23,11 +23,7 @@
       <nav class="navbar p-2" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item btn_home">
-            <img
-              src="https://bulma.io/images/bulma-logo.png"
-              width="112"
-              height="28"
-            />
+            <p class="button is-link">Portfolio</p>
           </a>
 
           <a
@@ -65,8 +61,6 @@
                 <a id="btn_paint" class="navbar-item"> Paint </a>
                 <a id="btn_cinewave" class="navbar-item"> Ciné-Wave </a>
                 <a id="btn_react" class="navbar-item"> React </a>
-                <hr class="navbar-divider" />
-                <a class="navbar-item"> Report an issue </a>
               </div>
             </div>
           </div>
@@ -75,7 +69,7 @@
               <div class="buttons">
                 <a
                   class="button is-primary is-outlined"
-                  href="./img/CV-cor.pdf"
+                  href="../img/CV-cor.pdf"
                   download="./img/CV-cor.pdf"
                 >
                   <strong>Download CV</strong>
@@ -109,7 +103,6 @@
               <a href="#" target="_blank" class="lien_projet card-footer-item"
                 >Accéder au Site</a
               >
-              <a href="#" class="card-footer-item">Edit</a>
             </footer>
           </div>
         </div>
