--- a/page_secondaire/secondaire.html
+++ b/page_secondaire/secondaire.html
@@ -109,7 +109,7 @@
       </div>
     </div>
 
-    <div class="about-me-container">
+    <div class="about-me-container mb-5">
       <div class="is-flex is-justify-content-space-evenly is-flex-wrap-wrap">
         <div class="who-i-am mt-6">
           <div class="card">
